--- a/assets/styles/components/_switch-button.scss
+++ b/assets/styles/components/_switch-button.scss
@@ -1,28 +1,28 @@
 .wrapper {
     width: 40px;
-}
-.switch {
-    z-index:3;
-    opacity: 1 !important;
-    pointer-events: auto !important;
-    width: 25px;
-    height: 25px;
-    appearance: none;
-    -webkit-appearance: none;
-    outline: none;
-    cursor: pointer;
-    &.desktop_button {
-        right: 2rem;
-        top: 2rem
+    .switch {
+        z-index:3;
+        opacity: 1 !important;
+        pointer-events: auto !important;
+        width: 25px;
+        height: 25px;
+        appearance: none;
+        -webkit-appearance: none;
+        outline: none;
+        cursor: pointer;
+        &.desktop_button {
+            right: 2rem;
+            top: 2rem
+        }
+        &.page_button {
+            right: 1.6rem;
+            top: 1.7rem;
+        }
+        &:after {
+            content: url(../../../public/images/moon.svg);
+        }
+        &:checked:after {
+            content: url(../../../public/images/sun.svg);;
+        }
     }
-    &.page_button {
-        right: 1.6rem;
-        top: 1.7rem;
-    }
-}
-.switch:after {
-    content: url(../../../public/images/moon.svg);
-}
-.switch:checked:after {
-    content: url(../../../public/images/sun.svg);;
 }
