--- a/assets/styles/front/_variables.scss
+++ b/assets/styles/front/_variables.scss
@@ -11,6 +11,8 @@
     --success-background: 186, 229, 186;
     --error-color: 139, 0, 0;
     --error-background: 235, 188, 188;
+    --primary-font: 'Josefin Sans', monospace, sans-serif;
+    --secondary-font: "Qwigley", monospace, sans-serif;
 }
 
 [theme=dark] {
