--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -2,46 +2,79 @@
 
 {% block body %}
 
-    <div class="body">
-        <section>
-            {# {% include "blocks/components/svgs/_section-up.html.twig" %} #}
+    <div class="background" id="particles-js"></div>
+                
+    {% include "blocks/components/_trigger_button.html.twig" with {
+        classes: 'background_trigger',
+        target: 'slide-in'
+    } %}
 
-            {% include "blocks/components/_day-night-switch.html.twig" with {
-                id: 'togButton',
-                class: 'desktop_button',
-            } %}
+    <div id="slide-in" class="background_container">
+        {% include "blocks/_presentation.html.twig" %}
 
-            <div id="projects" class="section_titles"><h6 class="center-align">PORTFOLIO</h6></div>
-            
-            <div id="portfolio" class="section scrollspy js-portfolio">
-                <div class="container">
-                    {% include "blocks/_project.html.twig" %}
-                </div>
-            </div>
-
-            <div id="cursus" class="section_titles"><h6 class="center-align">PARCOURS</h6></div>
-            
-            <div id="formations" class="section scrollspy js-education">
-                <div class="container">
-                    <div class="row formations">
-                        {% include "blocks/_education.html.twig" %}
-                    </div>
-                </div>
-            </div>
-
-            <div id="tools" class="section_titles"><h6 class="scenter-align">ENV</h6></div>
-              
-            <div id="competences" class="section scrollspy js-competence">
-                <div class="container"> 
-                {% include "blocks/components/svgs/_brands_shuffle.html.twig" %}
-                </div>  
-            </div>
-  
-            <div id="contact-me" class="section_titles"><h6 class="center-align">CONTACT</h6></div>
-            
-            {% include "blocks/_contact.html.twig" %}
-            {% include "blocks/_footer.html.twig" %}
-        </section>
+        {% include "blocks/_header.html.twig" with {
+            classes: "hidden",
+            id: "side_nav"
+        } %}
     </div>
     
+    {% include "blocks/components/_trigger_button.html.twig" with {
+        classes: 'burgermenu',
+        target: 'slide-out'
+    } %}
+
+    {% include "blocks/_header.html.twig" with {
+        classes: "sidenav",
+        id: "slide-out",
+    } %}
+
+    {% include "blocks/components/_project_modal.html.twig" with {
+        projects: projects
+    } %}
+
+    <div id="pageTop" class="main scrollspy right_side out">
+
+        <div class="body">
+            <section>
+            
+                {% include "blocks/components/_day-night-switch.html.twig" with {
+                    id: 'togButton',
+                    class: 'desktop_button',
+                } %}
+
+                <div id="projects" class="section_titles"><h2 class="center-align">PORTFOLIO</h2></div>
+                
+                <div id="portfolio" class="section scrollspy js-portfolio">
+                    <div class="container">
+                        {% include "blocks/_project.html.twig" %}
+                    </div>
+                </div>
+
+                <div id="cursus" class="section_titles"><h2 class="center-align">PARCOURS</h2></div>
+                
+                <div id="formations" class="section scrollspy js-education">
+                    <div class="container">
+                        <div class="row formations">
+                            {% include "blocks/_education.html.twig" %}
+                        </div>
+                    </div>
+                </div>
+
+                <div id="tools" class="section_titles"><h2 class="scenter-align">ENV</h2></div>
+                
+                <div id="competences" class="section scrollspy js-competence">
+                    <div class="container"> 
+                        {% include "blocks/_competences.html.twig" %}
+                    </div>  
+                </div>
+    
+                <div id="contact-me" class="section_titles"><h2 class="center-align">CONTACT</h2></div>
+                
+                {% include "blocks/_contact.html.twig" %}
+            </section>
+        </div>
+
+        {% include "blocks/_footer.html.twig" %}
+        
+    </div>
 {% endblock %}
