--- a/templates/reset_password/email.html.twig
+++ b/templates/reset_password/email.html.twig
@@ -1,18 +1,19 @@
 {% extends "base.html.twig" %}
 {% block stylesheets %}
     {{ parent() }}
-    {{ encore_entry_link_tags('auth') }}
 {% endblock %}
 
 {% block title %}Admin password request{% endblock %}
 
 {% block body %}
-<div class="container">
-    <div class="row valign-wrapper">
-        <div class="card-panel">
-            <p>Lien pour réinitialiser le mot de passe Admin :</p>
-            <a href="{{ url('app_reset_password', {token: resetToken.token}) }}" class="btn btn-primary btn-small">Changer le mot de passe</a>
-            <p>Lien expirant dans {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.</p>
+<div class="container_login">
+    <div class="main">
+        <div class="row valign-wrapper">
+            <div class="card-panel">
+                <p>Lien pour réinitialiser le mot de passe Admin :</p>
+                <a href="{{ url('app_reset_password', {token: resetToken.token}) }}" class="btn btn-primary btn-small">Changer le mot de passe</a>
+                <p>Lien expirant dans {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.</p>
+            </div>
         </div>
     </div>
 </div>
