--- a/assets/styles/components/_gallery.scss
+++ b/assets/styles/components/_gallery.scss
@@ -1,24 +1,12 @@
 @import './function';
 
-.c-row {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.c-col {
-    img {
-        display: block;
-        margin: auto;
-    }
-}
-
 body {
     * {
         margin: 0;
         padding: 0;
     }
+    // gallery card
     .hexIn {
-        border: solid 3px #ffffff;
         .hexLink {
             color: #ffffff;
             display:block;
@@ -29,7 +17,7 @@ body {
             img {
                 display: block;
             }
-            h2, div {
+            h3, div {
                 position: absolute;
                 width: 100%;
                 padding: 5%;
@@ -39,7 +27,7 @@ body {
                 -webkit-transition:  -webkit-transform .2s ease-out, opacity .3s ease-out;
                         transition:          transform .2s ease-out, opacity .3s ease-out;
               }
-              h2 {
+              h3 {
                 bottom: 50%;
                 padding-top:50%;
                 font: normal 1.5em/1 "Josefin Sans", Helvetica, sans-serif;
@@ -70,7 +58,7 @@ body {
             /*** HOVER EFFECT  **********************************************************************/
             &.hex_modal-trigger {
                 &:hover, &:focus, &:active, &.active {
-                    h2, div {
+                    h3, div {
                         -webkit-transform:translate3d(0,0,0);
                             -ms-transform:translate3d(0,0,0);
                                 transform:translate3d(0,0,0);
@@ -79,10 +67,85 @@ body {
             }
         }
     }
+
+    // gallery
+    .grid_gallery {
+        display: grid; 
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(12, 13vw);
+        gap: 1rem;
+        width: 90%;
+        margin: 0 auto;
+        .grid_items {
+            .card, .modal-trigger {
+                height: 100%;
+                background:none;
+            }
+            &.gallery__item--1 {
+                grid-column: 1 ;
+                grid-row: 1; 
+              }
+
+              &.gallery__item--2 {
+                grid-column: 2 / span 2;
+                grid-row: 1/ span 2; 
+              }
+
+              &.gallery__item--3 {
+                grid-column: 4;
+                grid-row: 1; 
+              }
+
+              &.gallery__item--4 {
+                grid-column: 1;
+                grid-row: 2; 
+              }
+
+              &.gallery__item--5 {
+                grid-column: 1; 
+                grid-row: 3; 
+              }
+
+              &.gallery__item--6 {
+                grid-column: 2; 
+                grid-row: 3; 
+              }
+
+              &.gallery__item--7 {
+                grid-column: 4; 
+                grid-row: 2; 
+              }
+
+              &.gallery__item--8 {
+                grid-column: 3; 
+                grid-row: 3; 
+              }
+
+              &.gallery__item--9 {
+                grid-column: 4; 
+                grid-row: 3; 
+              }
+                
+                &.gallery__item--10 {
+                  grid-column: 1;
+                  grid-row: 4; 
+                }
+                
+                &.gallery__item--11 {
+                  grid-column: 2 / span 2; 
+                  grid-row: 4; 
+                }
+                
+                &.gallery__item--12 {
+                  grid-column: 4; 
+                  grid-row: 4; 
+                }
+        }
+    }
+
     // SlideShow
     /* Slideshow container */
     .slideshow-container {
-        display: none;
         max-width: 1000px;
         overflow: hidden;
         position: relative;
@@ -100,7 +163,9 @@ body {
                 color: #ffffff;
                 font-size: 15px;
                 position: absolute;
-                bottom: 10%;
+                bottom: 0;
+                overflow: hidden;
+                height: 20%;
                 width: 100%;
                 text-align: center;
                 transition: height .6s;
