--- a/assets/styles/components/_timeline.scss
+++ b/assets/styles/components/_timeline.scss
@@ -73,48 +73,71 @@ body   {
         filter: grayscale(0);
       }
     }
-  }
   
-  .tl-content {
-    transform: translate3d(0, 0, 0) translateY(25px);
-    position: relative;
-    z-index: 1;
-    text-align: center;
-    margin: 0 1.618em;
-    top: 55%;
-    opacity: 0;
+    .tl-content {
+      transform: translate3d(0, 0, 0) translateY(25px);
+      position: relative;
+      z-index: 1;
+      text-align: center;
+      margin: 0 1.618em;
+      top: 55%;
+      opacity: 0;
+      
+      h3 {
+        text-transform: uppercase;
+        color: #38a7e2;
+        font-size: 1.2rem;
+        font-weight: normal;
+      }
+    }
     
-    h3 {
-      text-transform: uppercase;
-      color: #38a7e2;
-      font-size: 1.2rem;
-      font-weight: normal;
+    .tl-year {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translateX(-50%) translateY(-50%);
+      z-index: 1;
+      border-top: 1px solid #fff;
+      border-bottom: 1px solid #fff;
+      
+      p {
+        font-size: 1.728rem;
+        line-height: 0;
+      }
+    }
+    
+    .tl-bg {
+      transform: translate3d(0, 0, 0);
+      position: absolute;
+      width: 100%; height: 100%;
+      top: 0; left: 0;
+      background-size: cover;
+      background-position: center center;
+      transition: filter 0.5s ease;
+      filter: grayscale(100%);
     }
   }
-  
-  .tl-year {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
-    z-index: 1;
-    border-top: 1px solid #fff;
-    border-bottom: 1px solid #fff;
-    
-    p {
-      font-size: 1.728rem;
-      line-height: 0;
+}
+
+@media screen and (max-width: 900px) {
+  body {
+    #timeline {
+      flex-direction: column;
+      &:hover {
+        .tl-item {
+          width: 100%;
+        }
+      }
+      .tl-item {
+        width: 100%;
+        max-height: initial;
+        height: 8rem;
+        transition: height 0.5s ease;
+        &:hover {
+          width: initial!important;
+          height: 34rem !important;
+        }
+      }
     }
-  }
-  
-  .tl-bg {
-    transform: translate3d(0, 0, 0);
-    position: absolute;
-    width: 100%; height: 100%;
-    top: 0; left: 0;
-    background-size: cover;
-    background-position: center center;
-    transition: filter 0.5s ease;
-    filter: grayscale(100%);
   }
 }
