--- a/templates/blocks/_contact.html.twig
+++ b/templates/blocks/_contact.html.twig
@@ -1,9 +1,9 @@
 <div id="contact" class="page-footer section scrollspy">
     <div class="container">
         <div class="row">
-            <div class="col s12">
-                <p class="center-align">N'hésitez pas à m'envoyer un e-mail à cette adresse : <a href="mailto:charlotte.saidi@outlook.fr">charlotte.saidi@outlook.fr</a>, ou à me laisser un message sur le site. Je vous répondrai dans les plus brefs délais.</p>
-                <p class="center-align"><button data-target="modal1" class="btn btn-large waves-effect waves-green modal-trigger">Envoyer un message</button></p>
+            <div class="col s12 m10 push-m1 l8 push-l2">
+                <p class="contact_paragraph center-align">N'hésitez pas à m'envoyer un e-mail à cette adresse : <a href="mailto:charlotte.saidi@outlook.fr">charlotte.saidi@outlook.fr</a> <br> ou à me laisser un message sur le site. Je vous répondrai dans les plus brefs délais.</p>
+                {{ include('blocks/contact/_new.html.twig') }}
             </div>
             <div class="col s12">
                 <p class="center-align">Vous pouvez aussi me retrouver sur les sites suivants :</p>
