--- a/templates/blocks/_project.html.twig
+++ b/templates/blocks/_project.html.twig
@@ -3,32 +3,34 @@
     {# GALLERY #}
 
     {# Desktop Blocks #}
-    <div class="gallery hide-on-small-only">
+    <div class="gallery hide-on-med-and-down">
         {% if tools|default %}
             <div class="tool_badges row">
                 {% for tool in tools %}
-                    <a href="#"><span class="badge col">{{tool.title}}</span></a>
+                    <a href="#"><span class="badge">{{tool.title}}</span></a>
                 {% endfor %}
             </div>
         {% endif %}
-        <div class="row">
-            <div class="col s4">
-                {% for project in projects|slice(0, 4) %}
-                    <div class="hexIn">
-                        <a class="hexLink modal-trigger hex_modal-trigger" data-target="modal1{{project.id}}" data-project="{{project.id}}">
-                            <img src="{{asset('uploads/projets/' ~ project.image)}}" alt="Maquette du projet {{project.title}}" />
-                            <h2>{{project.title}}</h2>
-                            {{project.description|raw}}
-                        </a>
-                    </div>
-                {% endfor %}
+
+        <div class="grid_gallery">
+            {% for project in projects %}
+            <div class="gallery__item--{{project.id}} grid_items" style="background:url('{{asset('uploads/projets/' ~ project.image)}}'); background-size: cover; background-position: top;">
+                <div class="hexIn card">
+                    <a class="hexLink modal-trigger hex_modal-trigger" data-target="modal1{{project.id}}" data-project="{{project.id}}">
+                        {# <img src="{{asset('uploads/projets/' ~ project.image)}}" alt="Maquette du projet {{project.title}}" /> #}
+                        <h3>{{project.title}}</h3>
+                        {{project.description|raw}}
+                    </a>
+                </div>
             </div>
-            <div class="col s4">
+            {% endfor %}
+
+            {# <div class="col s4">
                 {% for project in projects|slice(4, 4) %}
-                    <div class="hexIn">
+                    <div class="hexIn card">
                         <a class="hexLink modal-trigger hex_modal-trigger" data-target="modal1{{project.id}}" data-project="{{project.id}}">
                             <img src="{{asset('uploads/projets/' ~ project.image)}}" alt="Maquette du projet {{project.title}}" />
-                            <h2>{{project.title}}</h2>
+                            <h3>{{project.title}}</h3>
                             {{project.description|raw}}
                         </a>
                     </div>
@@ -36,28 +38,28 @@
             </div>
             <div class="col s4">
                 {% for project in projects|slice(8, 4) %}
-                    <div class="hexIn">
+                    <div class="hexIn card">
                         <a class="hexLink modal-trigger hex_modal-trigger" data-target="modal1{{project.id}}" data-project="{{project.id}}">
                             <img src="{{asset('uploads/projets/' ~ project.image)}}" loading="lazy" alt="Maquette du projet {{project.title}}" />
-                            <h2>{{project.title}}</h2>
+                            <h3>{{project.title}}</h3>
                             {{project.description|raw}}
                         </a>
                     </div>
                 {% endfor %}
-            </div>
+            </div> #}
         </div>
     </div>
 
     {# Mobile Slideshow #}
     <!-- Slideshow container -->
-    <div class="slideshow-container show-on-small">
+    <div class="slideshow-container hide-on-large-only card">
 
         <!-- Full-width images with number and caption text -->
         {% for project in projects %}
             <div class="slides fade">
-                <a class="slide_link" data-target="modal1{{project.id}}" data-project="{{project.id}}">
+                <a class="slide_link modal-trigger" data-target="modal1{{project.id}}" data-project="{{project.id}}">
                     <img src="{{asset('uploads/projets/' ~ project.image)}}" alt="Maquette du projet {{project.title}}" >
-                    <h2 class="slide_text">{{project.title}}</h2>
+                    <h3 class="slide_text">{{project.title}}</h3>
                 </a>
             </div>
         {% endfor %}
