--- a/templates/blocks/contact/_form.html.twig
+++ b/templates/blocks/contact/_form.html.twig
@@ -62,7 +62,7 @@
 
     <div class="row">
         <div class="input-field col s12 center-align">
-            <button class="btn waves-effect waves-light disabled" id="submitted">{{ button_label|default('Envoyer') }}</button>
+            <button class="btn btn-large waves-effect waves-light disabled" id="submitted">{{ button_label|default('Envoyer un message') }}</button>
         </div>
     </div>  
 
