--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -1,26 +1,24 @@
 {% extends 'base.html.twig' %}
 {% block stylesheets %}
     {{ parent() }}
-    {{ encore_entry_link_tags('error-pages') }}
 {% endblock %}
 {% block title %}Page introuvable{% endblock %}
 
 {% block body %}
 
-<div class="main">
-    <div class="error_template center-align">
+<div class="error_page">
+    <div class="main">
+        <div class="error_template center-align">
 
-        <div id="error">
-            <div class="error card-panel">
-                <div class="error-message">
-                {% set referer = app.request.server.get('http-referer')|default('/') %}
-                    <h1 class="purple-text">404</h1>
-                    <h2>Ce site ne contient qu'une page, comment avez vous fait pour vous retrouver ici ?! <span class="emojis">&#128514;</span></h2>
-                </div>
-                <a class="error-link btn btn-small btn-primary" href="{{referer}}">Retour</a>
+            <div id="error">
+                {% include "blocks/components/_error_message.html.twig" with {
+                    title: "404",
+                    message: "Ce site ne contient qu'une page, comment avez vous fait pour vous retrouver ici ?!",
+                    emoji: "&#128514;"
+                } %}
             </div>
-        </div>
 
+        </div>
     </div>
 </div>
 {% endblock %}
