--- a/templates/reset_password/check_email.html.twig
+++ b/templates/reset_password/check_email.html.twig
@@ -1,21 +1,22 @@
 {% extends "base.html.twig" %}
 {% block stylesheets %}
     {{ parent() }}
-    {{ encore_entry_link_tags('auth') }}
 {% endblock %}
 
 {% block title %}Password Reset Email Sent{% endblock %}
 
 {% block body %}
 
-    <div class="container">
-        <div class="row valign-wrapper">
-            <div class="card-panel">
-                <p>
-                    Email contenant le lien de réinitialisation de mot de passe à l'adresse fournie.
-                    Ce lien expire dans {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.
-                </p>
-                <p>Si l'email n'est pas arrivé : vérifier dans les spams ou <a href="{{ path('app_forgot_password_request') }}">réessayer</a>.</p>
+    <div class="container_login">
+        <div class="main">
+            <div class="row valign-wrapper">
+                <div class="card-panel">
+                    <p>
+                        Email contenant le lien de réinitialisation de mot de passe à l'adresse fournie.
+                        Ce lien expire dans {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.
+                    </p>
+                    <p>Si l'email n'est pas arrivé : vérifier dans les spams ou <a href="{{ path('app_forgot_password_request') }}">réessayer</a>.</p>
+                </div>
             </div>
         </div>
     </div>
