--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -1,31 +1,32 @@
 {% extends "base.html.twig" %}
 {% block stylesheets %}
     {{ parent() }}
-    {{ encore_entry_link_tags('auth') }}
 {% endblock %}
 
 {% block title %}Reset Admin Password{% endblock %}
 
 {% block body %}
-    <div class="container">
-        <div class="row">
-            <div class="login card-panel">
-                {% for flashError in app.flashes('reset_password_error') %}
-                    <div class="alert alert-danger red-text text-darken-3" role="alert">{{ flashError }}</div>
-                {% endfor %}
-                <h1>Vérification Email</h1>
-
-                {{ form_start(requestForm) }}
-                    {{ form_row(requestForm.email) }}
-                    <div>
-                        <small>
-                            Un lien pour réinitialiser le mot de passe sera envoyé à cette adresse e-mail.
-                        </small>
-                    </div>
-
-                    <button class="btn btn-primary">Envoyer</button>
-                    <a href="{{path('home')}}">Retour au Portfolio</a>
-                {{ form_end(requestForm) }}
+    <div class="container_login">
+        <div class="main">
+            <div class="row">
+                <div class="login card-panel">
+                    {% for flashError in app.flashes('reset_password_error') %}
+                        <div class="alert alert-danger red-text text-darken-3" role="alert">{{ flashError }}</div>
+                    {% endfor %}
+                    <h1>Vérification Email</h1>
+    
+                    {{ form_start(requestForm) }}
+                        {{ form_row(requestForm.email) }}
+                        <div>
+                            <small>
+                                Un lien pour réinitialiser le mot de passe sera envoyé à cette adresse e-mail.
+                            </small>
+                        </div>
+    
+                        <button class="btn btn-primary">Envoyer</button>
+                        <a href="{{path('home')}}">Retour au Portfolio</a>
+                    {{ form_end(requestForm) }}
+                </div>
             </div>
         </div>
     </div>
