--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -1,21 +1,22 @@
 {% extends "base.html.twig" %}
 {% block stylesheets %}
     {{ parent() }}
-    {{ encore_entry_link_tags('auth') }}
 {% endblock %}
 
 {% block title %}Reset Admin Password{% endblock %}
 
 {% block body %}
-    <div class="container">
-        <div class="row valign-wrapper">
-            <div class="card-panel">
-                <h1>Réinitialiser le mot de passe</h1>
-
-                {{ form_start(resetForm) }}
-                    {{ form_row(resetForm.plainPassword) }}
-                    <button class="btn btn-primary">Envoyer</button>
-                {{ form_end(resetForm) }}
+    <div class="container_login">
+        <div class="main">
+            <div class="row valign-wrapper">
+                <div class="card-panel">
+                    <h1>Réinitialiser le mot de passe</h1>
+    
+                    {{ form_start(resetForm) }}
+                        {{ form_row(resetForm.plainPassword) }}
+                        <button class="btn btn-primary">Envoyer</button>
+                    {{ form_end(resetForm) }}
+                </div>
             </div>
         </div>
     </div>
