--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -2,45 +2,46 @@
     
 {% block stylesheets %}
     {{ parent() }}
-    {{ encore_entry_link_tags('auth') }}
 {% endblock %}
 
 {% block title %}Admin Login{% endblock %}
 {% block body %}
     <div class="container_login">
-        <div class="row card-panel">
-            <div class="inner_row">
-                <form class="login hoverable" method="post">
-                    {% if error %}
-                        <div class="alert red-text">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-                    {% endif %}
-
-                    {% if app.user %}
-                        <div class="mb-3">
-                            Admin connecté.e, <a href="{{ path('app_logout') }}">Déconnexion</a>
+        <div class="main">
+            <div class="row card-panel">
+                <div class="inner_row">
+                    <form class="login hoverable" method="post">
+                        {% if error %}
+                            <div class="alert red-text">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                        {% endif %}
+    
+                        {% if app.user %}
+                            <div class="mb-3">
+                                Admin connecté.e, <a href="{{ path('app_logout') }}">Déconnexion</a>
+                            </div>
+                        {% endif %}
+    
+                        <h1 class="h3 mb-3 font-weight-normal">Connexion Admin</h1>
+                        <div>
+                            <label for="inputEmail">Adresse email</label>
+                            <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
                         </div>
-                    {% endif %}
-
-                    <h1 class="h3 mb-3 font-weight-normal">Connexion Admin</h1>
-                    <div>
-                        <label for="inputEmail">Adresse email</label>
-                        <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-                    </div>
-                    <div>
-                        <label for="inputPassword">Mot de passe</label>
-                        <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-                    </div>
-                    <div>
-                        <input type="hidden" name="_csrf_token"
-                            value="{{ csrf_token('authenticate') }}"
-                        >
-
-                        <button class="btn btn-lg btn-primary" type="submit">Se connecter</button>
-                    </div>
-                    <div>
-                        <a href="{{path('app_forgot_password_request')}}">Mot de passe oublié</a>
-                    </div>
-                </form>
+                        <div>
+                            <label for="inputPassword">Mot de passe</label>
+                            <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+                        </div>
+                        <div>
+                            <input type="hidden" name="_csrf_token"
+                                value="{{ csrf_token('authenticate') }}"
+                            >
+    
+                            <button class="btn btn-lg btn-primary" type="submit">Se connecter</button>
+                        </div>
+                        <div>
+                            <a href="{{path('app_forgot_password_request')}}">Mot de passe oublié</a>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
